--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brisa Marina</title>
-    <meta name="description" content="Recetas y preparaciones de comidas">
-    <meta name="keywords" content="Recetas, comidas, preparaciones">
+    <title>Portafolio</title>
+    <meta name="description" content="Portafolio profesional">
+    <meta name="keywords" content="portafolio, diseño, HTLM, CSS, JS">
     <meta name="author" content="Claudia Heredia">
     <link rel="shortcut icon" type="image/png" href="assets/img/ricomida-favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand text-nav" href="#">Brisa Marina</a>
+            <a class="navbar-brand text-nav" href="#">Claudia Heredia</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#NavbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigator">
                 <span class="navbar-toggler-icon"></span>    
             </button>
@@ -31,10 +31,10 @@
                         <a class="nav-link" href="#">Inicio <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Recetas </a>
+                        <a class="nav-link" href="#">Bio </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nosotros </a>
+                        <a class="nav-link" href="#">Portafolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contacto </a>
@@ -48,18 +48,16 @@
         <div class="pt-4 mx-4">
             <div class="row">
                 <div class="col-sm-12">
-                    <img class="img-fluid" src="assets/img/spaghetti.jpg" alt="seafood">
+                    <img class="img-fluid" src="assets/img/banner2.jpg" alt="Autorretrato digital">
                 </div>
 
                 <div class="col-sm-12 mt-5 my-12 text-center">
-                    <h1>Spaghetti Gamberetti al Pesto</h1>
+                    <h1>Claudia Heredia</h1>
                     <div class="dropdown-divider"></div>
-                    <h3>Ven a Disfrutar los Sabores del Mar Mediterraneo a la Mesa</h3>
+                    <h3>Diseñadora UX/UI</h3>
                     <br> <br>
-                    <button id="enviarCorreo" type="button" class="btn btn btn-outline-secondary" data-toggle="tooltip" data-placement="bottom" title="Presione aquí para enviar a su correo">
-                        Reservar
-                    </button>
-                    <button type="button" class="btn btn btn-outline-secondary ml-2" data-toggle="tooltip" data-placement="right" title="Agregar una receta a sus favoritos">
+
+                    <button type="button" class="btn btn btn-outline-secondary ml-2" data-toggle="tooltip" data-placement="right" title="Agregar a diseños favoritos">
                         Añadir a favoritos
                     </button>
                 </div>
@@ -76,32 +74,32 @@
                     <div class="carousel-item active">
                         <div class="row">
                             <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/slider-1.png" class="img-fluid" alt="slider-1">
+                                <img src="assets/img/card-1.jpg" class="img-fluid" alt="slider-1">
                             </div>
                             <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/slider-2.png" class="img-fluid" alt="slider-2">
+                                <img src="assets/img/card-1.jpg" class="img-fluid" alt="slider-2">
                             </div>
                             <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/slider-3.png" class="img-fluid" alt="slider-3">
+                                <img src="assets/img/card-1.jpg" class="img-fluid" alt="slider-3">
                             </div>
                             <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/slider-4.png" class="img-fluid" alt="slider-4">
+                                <img src="assets/img/card-1.jpg" class="img-fluid" alt="slider-4">
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item text-dark">
                         <div class="row">
                             <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/slider-5.png" class="img-fluid" alt="slider-5">
+                                <img src="assets/img/marca-genesis.jpg" class="img-fluid" alt="slider-5">
                             </div>
                             <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/slider-6.png" class="img-fluid" alt="slider-6">
+                                <img src="assets/img/marca-genesis.jpg" class="img-fluid" alt="slider-6">
                             </div>
                             <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/slider-7.png" class="img-fluid" alt="slider-7">
+                                <img src="assets/img/marca-genesis.jpg" class="img-fluid" alt="slider-7">
                             </div>
                             <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/slider-8.png" class="img-fluid" alt="slider-8">
+                                <img src="assets/img/marca-genesis.jpg" class="img-fluid" alt="slider-8">
                             </div>
                         </div>
                     </div>
@@ -114,12 +112,12 @@
         <div class="dropdown-divider mt-5"></div>
         <div class="row">
             <div class="col-sm-4">
-                <h2 class="text-uppercase">Chef</h2><br>
-                <img class="img-fluid" src="assets/img/chef-placing-herb-on-gourmet-meal.jpg" alt="seafood">
+                <h2 class="text-uppercase">Portafolio</h2><br>
+                <img class="img-fluid" src="assets/img/mi.jpg" alt="autorretrato digital">
                 <br>
             </div>
             <div class="col-sm-8">
-                <h2 class="">Nuestra especialidad</h2><br>
+                <h2 class="">Formación profesional</h2><br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eu ex non nulla viverra posuere. Curabitur nec pulvinar dui, eu varius augue. Suspendisse dolor urna, dapibus quis justo eget, vehicula rhoncus massa. Vestibulum quis est
                     et dolor vestibulum pellentesque vitae sit amet lacus. Nullam vel fermentum lorem, fermentum placerat mauris. Aenean ornare libero dolor, eu aliquam ligula congue sit amet. In dapibus, libero sit amet suscipit sollicitudin, ligula
                     ante elementum tortor, eget tincidunt eros odio nec velit. In quis urna ex.
@@ -137,46 +135,79 @@
             </div>
         </div>
         <div class="dropdown-divider mt-5" style="margin-bottom: 2rem;"></div>
-        <h3 class="text-uppercase text-center">Destacados</h3>
+        <h3 class="text-uppercase text-center">Trabajos Destacados</h3>
         <div class="row">
             <div class="col-sm">
                 <div class="card" style="width: 20rem" margin-l>
-                    <img src="assets/img/recipe-card-1.png" class="card-img-top" alt="receta2">
+                    <img src="assets/img/pictogramas.jpg" class="card-img-top" alt="receta2">
                     <div class="card-body">
-                        <div class="card-title">Celestinos</div>
+                        <div class="card-title">Pictogramas</div>
                         <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat lactus</p>
                     </div>
                 </div>
             </div>
             <div class="col-sm">
                 <div class="card" style="width: 20rem;">
-                    <img src="assets/img/recipe-card-2.png" class="card-img-top" alt="receta3">
+                    <img src="assets/img/pictogramas.jpg" class="card-img-top" alt="receta3">
                     <div class="card-body">
-                        <div class="card-title">TIRAMISÚ</div>
+                        <div class="card-title">Pictogramas</div>
                         <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat lactus</p>
                     </div>
                 </div>
             </div>
             <div class="col-sm">
                 <div class="card" style="width: 20rem;">
-                    <img src="assets/img/recipe-card-03.png" class="card-img-top" alt="receta4">
+                    <img src="assets/img/pictogramas.jpg" class="card-img-top" alt="receta4">
                     <div class="card-body">
-                        <div class="card-title">Salmon Ahumado</div>
+                        <div class="card-title">Pictogramas</div>
                         <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat lactus</p>
                     </div>
                 </div>
             </div>
         </div>
     </main>
-    <section class="d-none d-md-block text-white py-5 border-top" style="background:turquoise">
-        <h2 class="text-center">Suscríbete en nuestro newsletter</h2>
-        <p class="text-center">y obtén las novedades </p>
-        <div class="text-center">
-            <button type="submit" class="btn btn-light btn-lg px-3 boton">Suscribir</button>
-        </div>
+    <section class="d-none d-md-block text-white py-5 border-top" style="background:blueviolet">
+
+        <section id="Contacto" class="container my-5">
+
+            <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
+
+            <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus sapiente, autem delectus totam expedita animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae tempora quaerat?</p>
+
+            <form>
+
+
+                <div class="form-group mb-4">
+                    <label class="mb-2">Nombre</label>
+                    <input class="form-control" placeholder="Nombre">
+                </div>
+
+                <div class="form-group mb-4">
+                    <label class="mb-2">Correo electrónico</label>
+                    <input class="form-control" placeholder="Correo electrónico" />
+                </div>
+
+
+                <div class="form-group">
+                    <label class="mb-2">Mensaje</label>
+                    <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
+                </div>
+
+                <div class="my-3 text-end">
+                    <button class="btn btn-secondary text-light">Enviar</button>
+                </div>
+
+
+
+            </form>
+
+        </section>
+        <!-- <div class="text-center">
+            <button type="submit" class="btn btn-light btn-lg px-3 boton">Contactar</button>
+        </div> -->
     </section>
     <footer class="bg-dark p-5">
-        <h2 class="text-white text-center ricomida">Brisa Marina</h2>
+        <h2 class="text-white text-center">Claudia Heredia</h2>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
