--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="description" content="Portafolio profesional">
     <meta name="keywords" content="portafolio, diseño, HTLM, CSS, JS">
     <meta name="author" content="Claudia Heredia">
-    <link rel="shortcut icon" type="image/png" href="assets/img/ricomida-favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Lobster&display=swap" rel="stylesheet">
@@ -67,8 +66,8 @@
         <section class="seccion_carrusel my-5 d-none d-sm-none d-md-block d-lg-block d-xl-block mx-4 border-dark border-bottom pb-5">
             <div id="carouselExampleIndicators" class="carousel" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                 </ol>
                 <div class="carousel-inner text-dark">
                     <div class="carousel-item active">
@@ -112,15 +111,14 @@
         <div class="dropdown-divider mt-5"></div>
         <div class="row">
             <div class="col-sm-4">
-                <h2 class="text-uppercase">Portafolio</h2><br>
+                <h2 class="text-uppercase">Bio</h2><br>
                 <img class="img-fluid" src="assets/img/mi.jpg" alt="autorretrato digital">
                 <br>
             </div>
             <div class="col-sm-8">
-                <h2 class="">Formación profesional</h2><br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eu ex non nulla viverra posuere. Curabitur nec pulvinar dui, eu varius augue. Suspendisse dolor urna, dapibus quis justo eget, vehicula rhoncus massa. Vestibulum quis est
-                    et dolor vestibulum pellentesque vitae sit amet lacus. Nullam vel fermentum lorem, fermentum placerat mauris. Aenean ornare libero dolor, eu aliquam ligula congue sit amet. In dapibus, libero sit amet suscipit sollicitudin, ligula
-                    ante elementum tortor, eget tincidunt eros odio nec velit. In quis urna ex.
+                <h2 class="">Perfil Profesional</h2><br>
+                <p>Creativa, versátil, apasionada por el diseño digital. Gracias a mi formación profesional continua cuento con conocimientos de metodologías ágiles, diseño UX/UI y desarrollo de aplicaciones Front end. Conocimientos de HTML5, CSS3 y JS,
+                    frameworks, manejo de software de diseño y desarrollo web.
 
                 </p><br>
                 <p>Nam at est et purus sollicitudin interdum ac in risus. Mauris ac ultricies mauris. Nunc id varius arcu. Nam auctor mi vitae risus dignissim aliquet. Nunc et mi eu ante molestie euismod viverra id nulla. Nullam purus nunc, tempus sit amet
@@ -135,7 +133,7 @@
             </div>
         </div>
         <div class="dropdown-divider mt-5" style="margin-bottom: 2rem;"></div>
-        <h3 class="text-uppercase text-center">Trabajos Destacados</h3>
+        <h3 class="text-uppercase text-center">Portafolio</h3>
         <div class="row">
             <div class="col-sm">
                 <div class="card" style="width: 20rem" margin-l>
@@ -209,6 +207,7 @@
     <footer class="bg-dark p-5">
         <h2 class="text-white text-center">Claudia Heredia</h2>
     </footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
