--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="pt-4 mx-4">
             <div class="row">
                 <div class="col-sm-12">
-                    <img class="img-fluid" src="assets/img/banner2.jpg" alt="Autorretrato digital">
+                    <img class="img-fluid" src="assets/img/banner3.jpg" alt="baner portafolio">
                 </div>
 
                 <div class="col-sm-12 mt-5 my-12 text-center">
@@ -111,53 +111,52 @@
         <div class="dropdown-divider mt-5"></div>
         <div class="row">
             <div class="col-sm-4">
-                <h2 class="text-uppercase">Bio</h2><br>
+                <h2 class="">Bio</h2><br>
                 <img class="img-fluid" src="assets/img/mi.jpg" alt="autorretrato digital">
                 <br>
             </div>
             <div class="col-sm-8">
-                <h2 class="">Perfil Profesional</h2><br>
-                <p>Creativa, versátil, apasionada por el diseño digital. Gracias a mi formación profesional continua cuento con conocimientos de metodologías ágiles, diseño UX/UI y desarrollo de aplicaciones Front end. Conocimientos de HTML5, CSS3 y JS,
+                <h2 class="">Perfil profesional</h2><br>
+                <p>Creativa, empatica, apasionada por el diseño digital. Gracias a mi formación profesional continua cuento con conocimientos de metodologías ágiles, diseño UX/UI y desarrollo de aplicaciones Front end. Conocimientos de HTML5, CSS3 y JS,
                     frameworks, manejo de software de diseño y desarrollo web.
 
                 </p><br>
-                <p>Nam at est et purus sollicitudin interdum ac in risus. Mauris ac ultricies mauris. Nunc id varius arcu. Nam auctor mi vitae risus dignissim aliquet. Nunc et mi eu ante molestie euismod viverra id nulla. Nullam purus nunc, tempus sit amet
-                    lobortis ut, fringilla vitae urna. Curabitur massa mauris, tincidunt et tortor quis, vulputate laoreet tellus.
+                <h3> ¿Que es el Diseño UX/UI?</h3>
+                <p>Conocido también como UX Design (User Experience Design), el diseño UX es un sistema desarrollado para crear productos que resuelvan las necesidades de los usuarios finales cubriendo todos los aspectos, desde el tema gráfico y la interfaz,
+                    hasta la interacción del usuario con el producto final, de tal forma que la experiencia de usuario sea la mejor posible. Cualquier producto o servicio necesita de una buena experiencia de usuario. De hecho, según la consultora Nielsen,
+                    si el UX de un sitio web es ineficaz -por ejemplo si la página demora en cargarse o su navegación es confusa– el usuario abandona el sitio en un promedio de 15 segundos; y 9 de cada 10 usuarios que tienen una mala experiencia en una
+                    página web no regresan a ella. Una buena experiencia de usuario va más allá de una página web. Muchos usuarios utilizan sus dispositivos móviles para consultar información, navegar por una página e incluso hacer compras en plataformas
+                    de comercio electrónico. Por esta razón, el diseño UX debe ser responsive, es decir, debe ajustarse sin problemas a cualquier tipo de pantalla, navegador y sistema operativo.
 
-                </p><br>
-                <p>Nam at est et purus sollicitudin interdum ac in risus. Mauris ac ultricies mauris. Nunc id varius arcu. Nam auctor mi vitae risus dignissim aliquet. Nunc et mi eu ante molestie euismod viverra id nulla. Nullam purus nunc, tempus sit amet
-                    lobortis ut, fringilla vitae urna. Curabitur massa mauris, tincidunt et tortor quis, vulputate laoreet tellus.
-
-                </p><br>
-                <p></p><br>
+                    <br>
             </div>
         </div>
         <div class="dropdown-divider mt-5" style="margin-bottom: 2rem;"></div>
-        <h3 class="text-uppercase text-center">Portafolio</h3>
+        <h3 class="text-center">Portafolio</h3>
         <div class="row">
             <div class="col-sm">
                 <div class="card" style="width: 20rem" margin-l>
-                    <img src="assets/img/pictogramas.jpg" class="card-img-top" alt="receta2">
+                    <img src="assets/img/Diseño-Mobile-TipsFibra_1.jpg" class="card-img-top" alt="diseño">
                     <div class="card-body">
-                        <div class="card-title">Pictogramas</div>
+                        <div class="card-title">Diseño Mobile</div>
+                        <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat lactus.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card" style="width: 20rem;">
+                    <img src="assets/img/Diseño-Mobile-TipsFibra_2.jpg" class="card-img-top" alt="diseño">
+                    <div class="card-body">
+                        <div class="card-title">Diseño Mobile</div>
                         <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat lactus</p>
                     </div>
                 </div>
             </div>
             <div class="col-sm">
                 <div class="card" style="width: 20rem;">
-                    <img src="assets/img/pictogramas.jpg" class="card-img-top" alt="receta3">
+                    <img src="assets/img/Diseño-Mobile-TipsFibra_3.jpg" class="card-img-top" alt="diseño">
                     <div class="card-body">
-                        <div class="card-title">Pictogramas</div>
-                        <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat lactus</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm">
-                <div class="card" style="width: 20rem;">
-                    <img src="assets/img/pictogramas.jpg" class="card-img-top" alt="receta4">
-                    <div class="card-body">
-                        <div class="card-title">Pictogramas</div>
+                        <div class="card-title">Diseño Mobile</div>
                         <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat lactus</p>
                     </div>
                 </div>
@@ -179,6 +178,7 @@
                     <label class="mb-2">Nombre</label>
                     <input class="form-control" placeholder="Nombre">
                 </div>
+
 
                 <div class="form-group mb-4">
                     <label class="mb-2">Correo electrónico</label>
