--- a/index.html
+++ b/index.html
@@ -72,34 +72,30 @@
                 <div class="carousel-inner text-dark">
                     <div class="carousel-item active">
                         <div class="row">
-                            <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/card-1.jpg" class="img-fluid" alt="slider-1">
+                            <div class="col-md-4 col-lg-4 col-xl-4">
+                                <img src="assets/img/features-1.jpg" class="img-fluid" alt="slider-1">
                             </div>
-                            <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/card-1.jpg" class="img-fluid" alt="slider-2">
+                            <div class="col-md-4 col-lg-4 col-xl-4">
+                                <img src="assets/img/features-2.jpg" class="img-fluid" alt="slider-2">
                             </div>
-                            <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/card-1.jpg" class="img-fluid" alt="slider-3">
+                            <div class="col-md-4 col-lg-4 col-xl-4">
+                                <img src="assets/img/features-3.jpg" class="img-fluid" alt="slider-3">
                             </div>
-                            <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/card-1.jpg" class="img-fluid" alt="slider-4">
-                            </div>
+
                         </div>
                     </div>
                     <div class="carousel-item text-dark">
                         <div class="row">
-                            <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/marca-genesis.jpg" class="img-fluid" alt="slider-5">
+                            <div class="col-md-4 col-lg-4 col-xl-4">
+                                <img src="assets/img/features-4.jpg" class="img-fluid" alt="slider-5">
                             </div>
-                            <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/marca-genesis.jpg" class="img-fluid" alt="slider-6">
+                            <div class="col-md-4 col-lg-4 col-xl-4">
+                                <img src="assets/img/features-5.jpg" class="img-fluid" alt="slider-6">
                             </div>
-                            <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/marca-genesis.jpg" class="img-fluid" alt="slider-7">
+                            <div class="col-md-4 col-lg-4 col-xl-4">
+                                <img src="assets/img/features-6.jpg" class="img-fluid" alt="slider-7">
                             </div>
-                            <div class="col-md-3 col-lg-3 col-xl-3">
-                                <img src="assets/img/marca-genesis.jpg" class="img-fluid" alt="slider-8">
-                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -112,7 +108,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <h2 class="">Bio</h2><br>
-                <img class="img-fluid" src="assets/img/mi.jpg" alt="autorretrato digital">
+                <img class="img-fluid" src="assets/img/me.jpg" alt="Foto Claudia" style="border-radius: 50%;">
                 <br>
             </div>
             <div class="col-sm-8">
@@ -136,34 +132,34 @@
         <div class="row">
             <div class="col-sm">
                 <div class="card" style="width: 20rem" margin-l>
-                    <img src="assets/img/Diseño-Mobile-TipsFibra_1.jpg" class="card-img-top" alt="diseño">
+                    <img src="assets/img/app-1.jpg" class="card-img-top" alt="diseño">
                     <div class="card-body">
-                        <div class="card-title">Diseño Mobile</div>
+                        <div class="card-title">Diseño Interfaz App</div>
                         <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat lactus.</p>
                     </div>
                 </div>
             </div>
             <div class="col-sm">
                 <div class="card" style="width: 20rem;">
-                    <img src="assets/img/Diseño-Mobile-TipsFibra_2.jpg" class="card-img-top" alt="diseño">
+                    <img src="assets/img/app-2.jpg" class="card-img-top" alt="diseño">
                     <div class="card-body">
-                        <div class="card-title">Diseño Mobile</div>
+                        <div class="card-title">Diseño Interfaz App</div>
                         <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat lactus</p>
                     </div>
                 </div>
             </div>
             <div class="col-sm">
                 <div class="card" style="width: 20rem;">
-                    <img src="assets/img/Diseño-Mobile-TipsFibra_3.jpg" class="card-img-top" alt="diseño">
+                    <img src="assets/img/app-3.jpg" class="card-img-top" alt="diseño">
                     <div class="card-body">
-                        <div class="card-title">Diseño Mobile</div>
+                        <div class="card-title">Diseño Interfaz App</div>
                         <p class="card-text">Mus enim elementum dignissim class eleifend justo, ut nunc magnis est vulputate nostra, blandit erat lactus</p>
                     </div>
                 </div>
             </div>
         </div>
     </main>
-    <section class="d-none d-md-block text-white py-5 border-top" style="background:blueviolet">
+    <section class="d-none d-md-block text-white py-5 border-top bg-info">
 
         <section id="Contacto" class="container my-5">
 
@@ -192,17 +188,12 @@
                 </div>
 
                 <div class="my-3 text-end">
-                    <button class="btn btn-secondary text-light">Enviar</button>
+                    <button id="enviar" class="btn btn-secondary text-light">Enviar</button>
                 </div>
-
-
 
             </form>
 
         </section>
-        <!-- <div class="text-center">
-            <button type="submit" class="btn btn-light btn-lg px-3 boton">Contactar</button>
-        </div> -->
     </section>
     <footer class="bg-dark p-5">
         <h2 class="text-white text-center">Claudia Heredia</h2>
